--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,8 @@ ul {
 }
 .news-list-swiper .swiper-slide > img {
   border-radius: 16px;
-  max-height: 267px;
+  max-height: 220px;
+  height: 100%;
 }
 .news-topic-list {
   display: flex;
@@ -858,5 +859,3 @@ footer {
     font-size: 16px;
   }
 }
-
-
